deployments/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spiringo
spec:
  type: ClusterIP
  selector:
    app: spiringo
  ports:
    - name: http
      port: 80
      targetPort: http
