deployments/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spiringo
spec:
  rules:
    - host: spiringo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spiringo
                port:
                  name: http
